<resources>
    <string name="app_name">SplashScreen</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_nm">First Name</string>
    <string name="last_nm">Last Name</string>
    <string name="mno">Mobile No</string>
    <string name="usernm">User Name</string>
    <string name="password">Enter Password</string>
    <string name="reset">Reset</string>
    <string name="about">About Us</string>
</resources>
